vemo-app/main/default/objects/StewardshipTechnologySettings__c/StewardshipTechnologySettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Stewardship Technology Settings</label>
</CustomObject>