vemo-app/main/default/objects/StewardshipTechnologySettings__c/fields/DisbursementDesignationGUID__c.field-meta.xml
<CustomField>
    <fullName>DisbursementDesignationGUID__c</fullName>
    <label>DisbursementDesignationGUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>