vemo-app/main/default/objects/StewardshipTechnologySettings__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <defaultValue>"https://sandbox.egsnetwork.com/post/post_responder_v2.php"</defaultValue>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>