vemo-app/main/default/objects/StewardshipTechnologySettings__c/fields/PaymentDesignationGUID__c.field-meta.xml
<CustomField>
    <fullName>PaymentDesignationGUID__c</fullName>
    <label>PaymentDesignationGUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>